force-app/main/default/objects/Market_Segmentation__c/Market_Segmentation__c.object-meta.xml
<CustomObject>
    <label>Segmentation</label>
    <nameField>
        <displayFormat>MS-{00000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>