force-app/main/default/objects/Market_Segmentation__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allen</fullName>
            </value>
            <value>
                <fullName>Aspen</fullName>
            </value>
            <value>
                <fullName>Hill-Rom</fullName>
            </value>
            <value>
                <fullName>Liko</fullName>
            </value>
            <value>
                <fullName>Mortara</fullName>
            </value>
            <value>
                <fullName>One Hill-Rom</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Trumpf</fullName>
            </value>
            <value>
                <fullName>Welch Allyn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>