force-app/main/default/objects/Market_Segmentation__c/fields/Effective_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Effective_Segmentation__c</fullName>
    <inlineHelpText>Choose a value only if you want to overwrite the calculated Market Segmentation value</inlineHelpText>
    <label>Effective Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>INT_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>