force-app/main/default/objects/Market_Segmentation__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <inlineHelpText>Segmentation is valid only for the fiscal year that you select here</inlineHelpText>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>