force-app/main/default/objects/Market_Segmentation__c/fields/Hill_Rom_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Hill_Rom_Revenue__c</fullName>
    <inlineHelpText>Required for Partner accounts</inlineHelpText>
    <label>Hill-Rom Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>