force-app/main/default/objects/Market_Segmentation__c/fields/Market_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Market_Segmentation__c</fullName>
    <label>Market Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>