force-app/main/default/objects/Market_Segmentation__c/fields/Market_Size__c.field-meta.xml
<CustomField>
    <fullName>Market_Size__c</fullName>
    <inlineHelpText>Required for Partner accounts</inlineHelpText>
    <label>Market Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>