force-app/main/default/objects/Market_Segmentation__c/fields/Strategic_Fit__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Fit__c</fullName>
    <inlineHelpText>Required for Partner accounts</inlineHelpText>
    <label>Strategic Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>